@@ -39,7 +39,9 @@
 
 package org.netbeans.modules.parsing.spi.indexing.support;
 
+import java.io.File;
 import java.net.MalformedURLException;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.logging.Level;
 import java.util.logging.Logger;
@@ -83,7 +85,15 @@ public final class IndexResult {
         if (cachedUrl == null) {
             URL url = null;
             try {
-                url = new URL(root, spi.getSourceName());
+                String protocol = root.getProtocol();
+                if ("file".equals(protocol)) {//NOI18N
+                    File rootFile = new File(root.toURI());
+                    url = new File(rootFile, spi.getSourceName()).toURI().toURL();
+                } else {
+                     url = new URL(root, spi.getSourceName());
+                }
+            } catch (URISyntaxException ex) {
+                LOG.log(Level.WARNING, null, ex);
             } catch (MalformedURLException ex) {
                 LOG.log(Level.WARNING, null, ex);
             }
@@ -117,5 +127,19 @@ public final class IndexResult {
             }
         }
         return cachedFile;
+    }
+
+    /**
+     * @since 1.9
+     */
+    public String getRelativePath() {
+        return spi.getSourceName();
+    }
+
+    /**
+     * @since 1.9
+     */
+    public URL getRoot() {
+        return root;
     }
 }
